[client] Separate Arrow IPC polling from Java decoding
Return owned IPC batches from the core client and decode them through an optional Arrow Java adapter with a caller-owned allocator. Preserve projection, schema evolution, changelog metadata and row slicing while keeping batches valid after scanner closure.

Advance offsets for empty log batches, migrate Paimon tiering to the adapter, and document the public API. Cover standard IPC interoperability, allocator ownership and empty-delete progress with regression tests.